# g-api-mcp

./: .gitattributes  .gitignore  .mcp.json  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SPEC-phase-1.md  SPEC-phase-2.md  SPEC-phase-3.md  SPEC-phase-4.md  SPEC.md  auth_setup.py  pyproject.toml  research-state.json  sources.json  sync-config.example.json  track-1-findings.json  track-2-findings.json  track-3-findings.json  track-4-findings.json  track-5-findings.json  track-6-findings.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
scripts/: register-task-scheduler.ps1
specs/: SPEC.md
src/g_api_mcp/: __init__.py  auth.py  calendar.py  contacts.py  envelope.py  gmail.py  server.py  sync.py  tasks.py
tests/: test_calendar.py  test_envelope.py  test_gmail.py  test_sync_e2e.py  test_sync_integration.py  test_sync_transform.py  test_sync_vault.py  test_tasks.py
tests/fixtures/: gtasks_corpus.json
