[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "g-api-mcp"
version = "0.1.0"
description = "Google APIs (Gmail, Calendar, Tasks) MCP server"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.26.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
    "keyring>=24.0.0",
]

[project.scripts]
g-api-mcp = "g_api_mcp.server:main"
g-api-mcp-auth = "auth_setup:main"
g-api-mcp-sync = "g_api_mcp.sync:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/g_api_mcp"]
